--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">AskomdchEcommerce</th></tr>
-<tr><td><a href="#t0">Askomdch Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">51,095</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Askomdch Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">47,451</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">AskomdchEcommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Askomdch Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestCases.CartTest_0002</td><td><a href="#m0">addtoCart</a></td><td rowspan="1">1703158724870</td><td rowspan="1">5825</td></tr><tr class="passedodd"><td rowspan="1">TestCases.Checkout_0004</td><td><a href="#m1">checkout</a></td><td rowspan="1">1703158735474</td><td rowspan="1">13020</td></tr><tr class="passedeven"><td rowspan="1">TestCases.ClickMenus_0003</td><td><a href="#m2">verifyallMenu</a></td><td rowspan="1">1703158705471</td><td rowspan="1">7423</td></tr><tr class="passedodd"><td rowspan="1">TestCases.LoginTest_0001</td><td><a href="#m3">logintest</a></td><td rowspan="1">1703158717787</td><td rowspan="1">2438</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">AskomdchEcommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Askomdch Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">TestCases.CartTest_0002</td><td><a href="#m0">addtoCart</a></td><td rowspan="1">1703261207285</td><td rowspan="1">20467</td></tr></tbody>
 </table>
 <h2>Askomdch Test</h2><h3 id="m0">TestCases.CartTest_0002#addtoCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestCases.Checkout_0004#checkout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">TestCases.ClickMenus_0003#verifyallMenu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">TestCases.LoginTest_0001#logintest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
