--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,21 +104,6 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-AskomdchEcommerce" title="TestCases.CartTest_0002" class="method navigator-link" hash-for-method="addtoCart">addtoCart</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-AskomdchEcommerce" title="TestCases.Checkout_0004" class="method navigator-link" hash-for-method="checkout">checkout</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-AskomdchEcommerce" title="TestCases.LoginTest_0001" class="method navigator-link" hash-for-method="logintest">logintest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-AskomdchEcommerce" title="TestCases.ClickMenus_0003" class="method navigator-link" hash-for-method="verifyallMenu">verifyallMenu</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-AskomdchEcommerce -->
@@ -148,51 +133,6 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-AskomdchEcommerce-class-passed -->
-          <div class="suite-AskomdchEcommerce-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">TestCases.LoginTest_0001</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="logintest">
-                  </a> <!-- logintest -->
-                  <span class="method-name">logintest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-AskomdchEcommerce-class-passed -->
-          <div class="suite-AskomdchEcommerce-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">TestCases.ClickMenus_0003</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyallMenu">
-                  </a> <!-- verifyallMenu -->
-                  <span class="method-name">verifyallMenu</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-AskomdchEcommerce-class-passed -->
-          <div class="suite-AskomdchEcommerce-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">TestCases.Checkout_0004</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="checkout">
-                  </a> <!-- checkout -->
-                  <span class="method-name">checkout</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-AskomdchEcommerce-class-passed -->
         </div> <!-- panel AskomdchEcommerce -->
         <div panel-name="test-xml-AskomdchEcommerce" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -209,10 +149,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Askomdch Test&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestCases.ClickMenus_0003&quot;/&gt;
-      &lt;class name=&quot;TestCases.LoginTest_0001&quot;/&gt;
       &lt;class name=&quot;TestCases.CartTest_0002&quot;/&gt;
-      &lt;class name=&quot;TestCases.Checkout_0004&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Askomdch Test --&gt;
 &lt;/suite&gt; &lt;!-- AskomdchEcommerce --&gt;
@@ -226,7 +163,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Askomdch Test (4 classes)</span>
+                <span class="test-name">Askomdch Test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -252,28 +189,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'checkout')
-data.setCell(0, 2, 'TestCases.Checkout_0004')
-data.setCell(0, 3, 13020);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyallMenu')
-data.setCell(1, 2, 'TestCases.ClickMenus_0003')
-data.setCell(1, 3, 7423);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'addtoCart')
-data.setCell(2, 2, 'TestCases.CartTest_0002')
-data.setCell(2, 3, 5825);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'logintest')
-data.setCell(3, 2, 'TestCases.LoginTest_0001')
-data.setCell(3, 3, 2438);
+data.setCell(0, 1, 'addtoCart')
+data.setCell(0, 2, 'TestCases.CartTest_0002')
+data.setCell(0, 3, 20467);
 window.suiteTableData['AskomdchEcommerce']= { tableData: data, tableDiv: 'times-div-AskomdchEcommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 28 seconds</span>
+              <span class="suite-total-time">Total running time: 20 seconds</span>
               <div id="times-div-AskomdchEcommerce">
               </div> <!-- times-div-AskomdchEcommerce -->
             </div> <!-- times-div -->
@@ -299,63 +224,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TestCases.ClickMenus_0003</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">TestCases.CartTest_0002</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">verifyallMenu</span>
-                <span class="method-start">7394 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">14830 ms</span>
-              </div> <!-- configuration-class after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">TestCases.LoginTest_0001</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">setup(chrome)</span>
-                <span class="method-start">15351 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">logintest</span>
-                <span class="method-start">19710 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">22150 ms</span>
-              </div> <!-- configuration-class after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">TestCases.CartTest_0002</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">setup(chrome)</span>
-                <span class="method-start">22743 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
                 <span class="method-name">addtoCart</span>
-                <span class="method-start">26793 ms</span>
+                <span class="method-start">25121 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">32623 ms</span>
-              </div> <!-- configuration-class after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">TestCases.Checkout_0004</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">setup(chrome)</span>
-                <span class="method-start">33104 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">checkout</span>
-                <span class="method-start">37397 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">50419 ms</span>
+                <span class="method-start">45614 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
