--- a/test-output/old/AskomdchEcommerce/methods.html
+++ b/test-output/old/AskomdchEcommerce/methods.html
@@ -1,28 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>AskomdchEcommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e6fbd">  <td>23/12/21 17:08:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClickMenus_0003.verifyallMenu()[pri:0, instance:TestCases.ClickMenus_0003@65fb9ffc]">verifyallMenu</td> 
-  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="ef8d72">  <td>23/12/21 17:08:33</td>   <td>7959</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:TestCases.LoginTest_0001@639c2c1d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="ef8d72">  <td>23/12/21 17:08:51</td>   <td>25712</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:TestCases.Checkout_0004@443118b0]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="ef8d72">  <td>23/12/21 17:08:40</td>   <td>15351</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:TestCases.CartTest_0002@5fe94a96]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="f9896d">  <td>23/12/21 17:08:55</td>   <td>30004</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Checkout_0004.checkout()[pri:0, instance:TestCases.Checkout_0004@443118b0]">checkout</td> 
-  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="ef8d72">  <td>23/12/21 17:08:18</td>   <td>-7368</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:TestCases.ClickMenus_0003@65fb9ffc]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="ef8d72">  <td>23/12/21 17:08:32</td>   <td>7439</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:TestCases.ClickMenus_0003@65fb9ffc]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="ef8d72">  <td>23/12/21 17:08:40</td>   <td>14757</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:TestCases.LoginTest_0001@639c2c1d]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="7c8faf">  <td>23/12/21 17:08:37</td>   <td>12316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest_0001.logintest()[pri:0, instance:TestCases.LoginTest_0001@639c2c1d]">logintest</td> 
-  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="ef8d72">  <td>23/12/21 17:09:08</td>   <td>43027</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:TestCases.Checkout_0004@443118b0]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="ef8d72">  <td>23/12/21 17:08:50</td>   <td>25231</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:TestCases.CartTest_0002@5fe94a96]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775386112</td>   <td></td> </tr>
-<tr bgcolor="f99788">  <td>23/12/21 17:08:44</td>   <td>19400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartTest_0002.addtoCart()[pri:0, instance:TestCases.CartTest_0002@5fe94a96]">addtoCart</td> 
-  <td>main@775386112</td>   <td></td> </tr>
+<tr bgcolor="9e6fbd">  <td>23/12/22 21:36:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartTest_0002.addtoCart()[pri:0, instance:TestCases.CartTest_0002@73a1e9a9]">addtoCart</td> 
+  <td>main@868815265</td>   <td></td> </tr>
+<tr bgcolor="e3cb8e">  <td>23/12/22 21:36:22</td>   <td>-25068</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:TestCases.CartTest_0002@73a1e9a9]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@868815265</td>   <td></td> </tr>
+<tr bgcolor="e3cb8e">  <td>23/12/22 21:37:07</td>   <td>20517</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:TestCases.CartTest_0002@73a1e9a9]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@868815265</td>   <td></td> </tr>
 </table>
